# PaddleCustomDevice

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_cn.md  README_en.md  README_ja.md
ascend/: CMakeLists.txt  README.md  setup.py.in
ascend/cmake/: ascend.cmake  paddle.cmake  third_party.cmake
ascend/kernels/: accuracy_kernel.cc  adam_kernel.cc  argsort_kernel.cc  batch_norm_kernel.cc  conv2d_kernel.cc  flatten_kernel.cc  full_kernel.cc  gaussian_random_kernel.cc  matmul_kernel.cc  mean_all_kernel.cc  momentum_kernel.cc  npu_enforce.h  npu_funcs.h  npu_op_runner.cc  npu_op_runner.h  pool2d_kernel.cc  reduce_max_kernel.cc  reduce_mean_kernel.cc  reduce_min_kernel.cc  reduce_sum_kernel.cc  reshape2_kernel.cc  sgd_kernel.cc  slice_kernel.cc  softmax_kernel.cc  top_k_kernel.cc  uniform_random_kernel.cc  where_index_kernel.cc  where_kernel.cc
ascend/runtime/: runtime.cc
backends/biren_gpu/: CMakeLists.txt  README.md  README_cn.md  README_en.md  setup.py.in
backends/biren_gpu/cmake/: version.cmake
backends/biren_gpu/kernels/: abs_kernel.cc  div_kernel.cc  elementwise_max.cc  elementwise_min.cc  elementwise_pow.cc  exp_kernel.cc  hard_sigmoid_kernel.cc  scale_kernel.cc
backends/biren_gpu/runtime/: runtime.cc  runtime.h
backends/biren_gpu/tests/: CMakeLists.txt  test_abs_op_supa.py
backends/custom_cpu/: CMakeLists.txt  README.md  README_cn.md  README_ja.md  mnist.pdparams
backends/custom_cpu/cmake/: paddle.cmake
backends/custom_cpu/kernels/: argsort_kernel.cc  assign_value_kernel.cc  cast_kernel.cc  compare_kernel.cc  concat_kernel.cc  contiguous_kernel.cc  cross_entropy_with_softmax_kernel.cc  elementwise_kernel.cc  fill_kernel.cc  full_kernel.cc  kernels.h  matmul_kernel.cc  mean_kernel.cc  memcpy_kernel.cc  phi_funcs.h  reduce_kernel.cc  reshape_kernel.cc  sgd_kernel.cc  slice_kernel.cc  softmax_kernel.cc  strided_copy_kernel.cc  transpose_kernel.cc  uniform_kernel.cc  uniform_random_kernel.cc
backends/custom_cpu/runtime/: runtime.cc
backends/custom_cpu/tests/: CMakeLists.txt  test_MNIST_model.py
backends/gcu/: CMakeLists.txt  README.md  README_cn.md  paddle_gcu_export.map  setup.py.in
backends/gcu/cmake/: generic.cmake
backends/gcu/common/: common.cc  common.h  gcu_env_list.h  gcu_funcs.h  gcu_op_runner.cc  gcu_op_runner.h  gcu_profiler.h  host_pinned_allocator.h  utils.cc  utils.h
backends/gcu/custom_op/: conv_add_mul_add_hard_swish_mul_add_op.cc  conv_bias_activate_op.cc  conv_bn_hard_swish_op.cc  conv_bn_op.cc  conv_bn_relu_op.cc  custom_op_common.cc  custom_op_common.h  dot_bias_op.cc  fused_add_rms_norm_op.cc  fused_conv2d_add_op.cc  fused_conv2d_transpose_bias_act_op.cc  fused_fc_elementwise_layernorm_op.cc  fused_multi_head_attention.cc  fused_rotary_embedding_op.cc  fused_sdp_flash_attention_op.cc  fused_self_attention.cc  gcu_netoutput_op.cc  mul_add_op.cc  my_add_n_op.cc  rms_norm_op.cc
backends/gcu/kernels/: abs_kernel.cc  accuracy_kernel.cc  activation_kernel.cc  activation_kernels.cc  adam_kernel.cc  add_n_kernel.cc  arange_kernel.cc  arg_min_max_kernel.cc  arg_min_max_kernels.cc  argsort_grad_kernel.cc  argsort_kernel.cc  assign_kernel.cc  atan2_kernel.cc  batch_norm_kernel.cc  binary_kernels.cc  bitwise_kernel.cc  cast_kernel.cc  cast_kernel.h  cholesky_kernel.cc  clip_kernel.cc  compare_kernel.cc  compare_kernels.cc  concat_kernel.cc  contiguous_kernel.cc  conv_kernel.cc  conv_transpose_kernel.cc  copysign_kernel.cc  cross_entropy_kernel.cc  cross_kernel.cc  cumsum_kernel.cc  cumulate_kernel.cc  diag_kernel.cc  diagonal_kernel.cc  dropout_kernel.cc  einsum_kernel.cc  elementwise_kernel.cc  embedding_kernel.cc  expand_as_kernel.cc  expand_kernel.cc  eye_kernel.cc  (+85 more)
backends/gcu/passes/: __init__.py  common.py  gcu_conv_add_mul_add_hard_swish_mul_add_fuse.py  gcu_conv_bias_activate_fuse.py  gcu_conv_bn_fuse.py  gcu_conv_bn_hard_swish_fuse.py  gcu_conv_depthwise_elementwise_add_fuse_pass.py  gcu_conv_elementwise_add_fuse_pass.py  gcu_conv_transpose_elementwise_add_act_fuse_pass.py  gcu_conv_transpose_elementwise_add_fuse_pass.py  gcu_dot_bias_fuse.py  gcu_linear_fuse.py  gcu_mul_add_fuse.py  gcu_multi_head_attn_fuse.py  gcu_netoutput_pass.py  gcu_sdp_attn_fuse.py
backends/gcu/runtime/: flags.h  gcu_memory.h  runtime.cc  runtime.h
backends/gcu/tests/: CMakeLists.txt
backends/gcu/topscc_custom_kernels/: topscc_custom_demo_kernel.cc
backends/intel_gpu/: CMakeLists.txt  README.md  load.sh  setup.py.in
backends/intel_gpu/cmake/: dummy.c.in  paddle.cmake  third_party.cmake
backends/intel_gpu/kernels/: argsort_kernel.cc  assign_value_kernel.cc  cast_kernel.cc  compare_kernel.cc  cross_entropy_with_softmax_kernel.cc  dnn_support.hpp  elementwise_kernel.cc  full_kernel.cc  kernels.h  matmul_kernel.cc  mean_kernel.cc  memcpy_kernel.cc  phi_funcs.h  reduce_kernel.cc  reshape_kernel.cc  sgd_kernel.cc  slice_kernel.cc  softmax_kernel.cc  transpose_kernel.cc  uniform_random_kernel.cc
backends/intel_gpu/runtime/: runtime.cc
backends/intel_gpu/tests/: CMakeLists.txt  fast_check.cpp  hapi_mnist_bf16_static.py  simple_test.py  test_LeNet_MNIST_from_paddlepaddle.py  test_MNIST_model.py  test_lenet_mnist.py  test_lenet_mnist_static.py  test_mean_op.py
backends/intel_gpu/toolkit/: actual_expect.diff  build_and_run.sh  build_gcc_paddlepaddle.sh  op_test_intel_gpu.diff  post_process.sh  pre_process.sh
backends/mlu/: CMakeLists.txt  README.md  README_cn.md  setup.py.in
backends/mlu/cmake/: generic.cmake  paddle.cmake  third_party.cmake  version.cmake
backends/mlu/custom_op/: fused_rms_norm_mlu.cc
backends/mlu/kernels/: abs_kernel.cc  accuracy_kernel.cc  activation_kernel.cc  adam_kernel.cc  add_n_kernel.cc  arg_max_kernel.cc  argsort_kernel.cc  assign_kernel.cc  (+109 more)
backends/mlu370/: CMakeLists.txt
backends/mps/: .clang-format  CMakeLists.txt  README.md  setup.py.in
backends/npu/: CMakeLists.txt  README.md  README_cn.md  README_en.md  diff  diff_all_grad  framework.proto  log_amp  mnist.pdparams  pybind.cc  setup.py.in
backends/sdaa/: CMakeLists.txt  README.md  README_cn.md  compile.sh  setup.py.in
(+2112 files in other folders)
